--- a/css/style.css
+++ b/css/style.css
@@ -128,10 +128,12 @@ a {
 .subtitle {
     display: flex;
     margin-top: 6rem;
-    color: var(--menu-font-color);
+
 }
 
 .subtitle p {
+    color: var(--font-color);
+    opacity: 50%;
     font-size: 1.25rem;
     margin-right: 6rem;
     line-height: 1.875rem;
@@ -140,4 +142,137 @@ a {
 
 .subtitle img {
     padding-right: 4rem;
+}
+
+/* ******** content-support ****** */
+
+#content-support {
+    margin-top: 7.25rem;
+    border-radius: 1rem;
+    padding: 2rem;
+    background-color: var(--secondary-background-color);
+}
+
+.support {
+    display: flex;
+    position: relative;
+    align-items: flex-start;
+}
+
+
+.item-1 .text {
+    margin: 0 3.25rem;
+    display: flex;
+    flex-direction: column;
+    max-width: 16rem;
+}
+
+.item-1 .text h2 {
+    margin-bottom: 1rem;
+    font-size: 2.25rem;
+    font-weight: 600;
+    color: var(--font-color);
+}
+
+.item-1 .text p {
+    color: var(--font-color);
+    opacity: 50%;
+}
+
+.item-1 .arrow {
+    margin: 0;
+    left: 26%;
+    margin-left: 3.25rem;
+}
+
+.item-2 {
+    margin: 2rem 0;
+}
+
+.item-2 h1 {
+    font-size: 3rem;
+    font-weight: 500;
+    color: var(--font-color);
+    max-width: 35rem;
+    margin-right: 3.25rem;
+}
+
+.item-2 .btn {
+    display: flex;
+    font-size: 1rem;
+    padding: 0.5rem 1.5rem;
+    font-weight: bold;
+    align-items: center;
+    background-color: var(--font-color);
+    color: var(--primary-background-color);
+    border-radius: 2rem;
+    line-height: 1.5rem;
+}
+
+.item-2 .btn img {
+    margin-left: 0.75rem;
+}
+
+.support-container {
+    display: flex;
+    padding: 0.5rem;
+    border-radius: 24px;
+    background-color: var(--secondary-background-color-alt);
+}
+
+.support-container-img img {
+    padding: 0;
+    margin-bottom: -1rem;
+    border-radius: 1rem;
+}
+
+.support-container-text {
+    display: flex;
+    flex-direction: column;
+    margin: 3.2rem 0 1.9rem 0.9rem;
+    align-items: center;
+}
+
+.support-container-text h3 {
+    margin-bottom: 2rem;
+    font-size: 1.5rem;
+    text-align: center;
+}
+
+.support-container-icons {
+    padding: 0 3rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#icon-people {
+    width: 90px;
+    height: 90px;
+    border-radius: 50px;
+    margin-bottom: 0.75rem;
+}
+
+.item-3 h2 {
+    font-size: 2.25rem;
+    color: var(--font-color);
+    font-weight: 600;
+    margin-bottom: 1.125rem;
+}
+
+.item-3 h2 span {
+    font-size: 5rem;
+    margin-left: 4.625rem;
+
+}
+
+.item-3 .text {
+    margin-left: 3.25rem;
+}
+
+.item-3 .text p {
+    color: var(--font-color);
+    border-top: var(--font-color) 1px solid;
+    font-size: 1.25rem;
+    padding-top: 1.125rem;
 }
