--- a/crypto folder/css/style.css
+++ b/crypto folder/css/style.css
@@ -8,6 +8,7 @@
     --secondary-background-color: #ffffff;
     --secondary-background-color-alt: #FBF9FE;
     --primary-text-color: #252525;
+    --secondary-text-color: #363637;
     --text-color-detail: #F966B9;
 }
 
@@ -29,6 +30,12 @@ a {
 body {
     margin: 0 7.5rem;
     background-color: var(--primary-background-color);
+}
+
+/* ********* utilidades ****** */
+
+.text-alt {
+    color: var(--text-color-detail);
 }
 
 /* ********* nav *********** */
@@ -141,10 +148,6 @@ body {
     font-weight: 500;
 }
 
-.home-info>h1>span {
-    color: var(--text-color-detail);
-}
-
 .home-info>p {
     font-family: var(--font2);
     font-size: 1.25rem;
@@ -192,7 +195,6 @@ body {
 /* ********* home-section-img ********** */
 
 #home-img-img {
-    position: absolute;
     right: 7.5rem;
 }
 
@@ -205,13 +207,11 @@ body {
     background-color: var(--primary-text-color);
     position: absolute;
     margin-top: 250px;
-    margin-left: 330px;
+    margin-left: -45px;
 }
 
 .home-footer {
-    position: absolute;
-    top: 80%;
-    right: 0;
+    margin: 7rem -7.5rem 5rem -7.5rem;
     overflow: hidden;
 }
 
@@ -230,19 +230,108 @@ body {
 }
 
 #scroll-text {
-    animation: scroll 20s infinite linear;
-
+    animation: scroll 12s infinite linear;
 }
-
-
-
 
 @keyframes scroll {
     from {
-        transform: translateX(-10%);
+        transform: translateX(-115%);
     }
 
     to {
         transform: translateX(100%);
     }
+}
+
+/* ********* benefits ********** */
+
+#benefits {
+    margin: 0rem -7.5rem;
+    background-color: rgba(255, 255, 255, 0.4);
+    border-radius: 1.75rem;
+    padding: 5rem 0;
+}
+
+
+.benefits-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.benefits-card {
+    display: flex;
+    flex-direction: row;
+    gap: 1.5rem;
+}
+
+.column-item {
+    display: flex;
+    flex-direction: column;
+    gap: 1.25rem;
+}
+
+
+.benefits-content>h1 {
+    color: var(--primary-text-color);
+    font-family: var(--font1);
+    font-size: 2.5rem;
+    font-weight: 500;
+    line-height: 3.75rem;
+    text-align: center;
+}
+
+.card {
+    width: 24rem;
+    height: 19.75rem;
+    padding: 2.5rem 3.75rem 1.25rem 3.75rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: column;
+    background-color: var(--secondary-background-color);
+    border-radius: 1.5rem;
+}
+
+.card>h1 {
+    font-family: var(--font1);
+    text-align: center;
+    font-size: 1.5rem;
+    font-weight: 400;
+}
+
+.card p {
+    font-family: var(--font2);
+    text-align: center;
+    font-size: 1rem;
+    line-height: 1.7rem;
+    color: var(--secondary-text-color);
+}
+
+.card-1>img {
+    width: 8.5rem;
+    height: 8.5rem;
+}
+
+.card-4>img {
+    width: 14rem;
+    height: 9rem;
+    border-radius: 1.25rem;
+}
+
+.card-5 {
+    display: flex;
+    justify-content: start;
+    align-self: stretch;
+    height: auto;
+    padding: 2.483rem 4.097rem;
+}
+
+.card-5>img {
+    width: 25rem;
+    height: 25rem;
+}
+
+.card-5>p {
+    margin-bottom: 5.5rem;
 }
