--- a/crypto folder/css/style.css
+++ b/crypto folder/css/style.css
@@ -8,8 +8,11 @@
     --secondary-background-color: #ffffff;
     --secondary-background-color-alt: #FBF9FE;
     --primary-text-color: #252525;
+    --text-black: #000000;
+    --text-white: #ffffff;
     --secondary-text-color: #363637;
     --text-color-detail: #F966B9;
+    --text-comment: #787478;
 }
 
 html {
@@ -134,6 +137,7 @@ body {
     flex-direction: column;
     position: relative;
     margin-top: 3.81rem;
+
 }
 
 /* ***********home-section-text********** */
@@ -266,13 +270,13 @@ body {
 .benefits-content {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    margin: 0rem 7.5rem;
 }
 
 .benefits-card {
     display: flex;
+    justify-content: space-between;
     flex-direction: row;
-    gap: 1.5rem;
 }
 
 .column-item {
@@ -292,7 +296,7 @@ body {
 }
 
 .card {
-    width: 24rem;
+    width: 25rem;
     height: 19.75rem;
     padding: 2.5rem 3.75rem 1.25rem 3.75rem;
     display: flex;
@@ -344,4 +348,131 @@ body {
 
 .card-5>p {
     margin-bottom: 5.5rem;
+}
+
+
+/* ********* comments ********** */
+
+#comments {
+    margin: 3.75rem 0;
+}
+
+.comments-content {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    gap: 3.25rem;
+    flex: 1
+}
+
+.comments-content>h1 {
+    color: var(--primary-text-color);
+    text-align: center;
+    font-family: var(--font1);
+    font-size: 2.75rem;
+    font-weight: 500;
+    line-height: 3.75rem;
+}
+
+.user-comments {
+    display: flex;
+    justify-content: space-between;
+}
+
+.card-user-comments {
+    position: relative;
+}
+
+.card-user-comments>img {
+    width: 30rem;
+    height: auto;
+}
+
+.user-comments-text {
+    position: absolute;
+    top: 0;
+}
+
+.user-comments-text h3 {
+    color: var(--primary-text-color);
+    font-family: var(--font2);
+    font-size: 1rem;
+    font-weight: 600;
+    line-height: 1.5rem;
+    margin-left: 1.25rem;
+    margin-bottom: 0;
+    margin-top: 2rem;
+}
+
+.user-comments-text>p {
+    color: var(--text-comment);
+    font-family: var(--font2);
+    font-size: 0.875rem;
+    font-weight: 500;
+    margin-left: 1.25rem;
+    margin-top: 0;
+}
+
+.user-comments-text>img {
+    position: absolute;
+    top: 0;
+    right: .75rem;
+    border-radius: 50%;
+    width: 16.5%;
+}
+
+.comments-text {
+    margin: 1.25rem;
+    display: inline-flex;
+    padding: 1.5rem 1.25rem;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 1rem;
+    background-color: var(--secondary-background-color);
+    border-radius: 1.25rem;
+}
+
+.comments-text h2 {
+    width: 14rem;
+    font-family: var(--font1);
+    color: var(--primary-text-color-alt);
+    font-size: 1.75rem;
+    line-height: 2rem;
+    text-transform: uppercase;
+    font-weight: 400;
+}
+
+.comments-text p {
+    font-family: var(--font2);
+    color: var(--text-black);
+    font-size: 1rem;
+    line-height: 1.5rem;
+    font-weight: 400;
+}
+
+/* historic comments */
+
+.historic {
+    display: flex;
+    justify-content: space-between;
+}
+
+.historic-data h1 {
+    color: var(--text-white);
+    font-family: var(--font2);
+    font-size: 5rem;
+    font-weight: 600;
+    margin-bottom: -1rem;
+    text-align: center;
+}
+
+.historic-data p {
+    margin-top: 0.5rem;
+    color: var(--secondary-text-color);
+    font-family: var(--font2);
+    font-size: 1.125rem;
+    font-weight: 500;
+    text-transform: uppercase;
+    margin-top: 1rem;
+    text-align: center;
 }
