--- a/crypto folder/css/style.css
+++ b/crypto folder/css/style.css
@@ -297,7 +297,7 @@ body {
 }
 
 .card {
-    width: 25rem;
+    max-width: 25rem;
     height: 19.75rem;
     padding: 2.5rem 3.75rem 1.25rem 3.75rem;
     display: flex;
@@ -324,12 +324,12 @@ body {
 }
 
 .card-1>img {
-    width: 8.5rem;
+    max-width: 8.5rem;
     height: 8.5rem;
 }
 
 .card-4>img {
-    width: 14rem;
+    max-width: 14rem;
     height: 9rem;
     border-radius: 1.25rem;
 }
@@ -343,7 +343,7 @@ body {
 }
 
 .card-5>img {
-    width: 25rem;
+    max-width: 25rem;
     height: 25rem;
 }
 
@@ -385,7 +385,7 @@ body {
 }
 
 .card-user-comments>img {
-    width: 30rem;
+    max-width: 30rem;
     height: auto;
 }
 
@@ -402,7 +402,7 @@ body {
     line-height: 1.5rem;
     margin-left: 1.25rem;
     margin-bottom: 0;
-    margin-top: 2rem;
+    margin-top: 1rem;
 }
 
 .user-comments-text>p {
@@ -411,7 +411,7 @@ body {
     font-size: 0.875rem;
     font-weight: 500;
     margin-left: 1.25rem;
-    margin-top: 0;
+    margin 0;
 }
 
 .user-comments-text>img {
@@ -423,7 +423,7 @@ body {
 }
 
 .comments-text {
-    margin: 1.25rem;
+    margin: 0 1.25rem;
     display: inline-flex;
     padding: 1.5rem 1.25rem;
     flex-direction: column;
@@ -434,6 +434,7 @@ body {
 }
 
 .comments-text h2 {
+    margin: 0;
     width: 14rem;
     font-family: var(--font1);
     color: var(--primary-text-color-alt);
@@ -444,6 +445,7 @@ body {
 }
 
 .comments-text p {
+    margin: 0;
     font-family: var(--font2);
     color: var(--text-black);
     font-size: 1rem;
@@ -468,7 +470,6 @@ body {
 }
 
 .historic-data p {
-    margin-top: 0.5rem;
     color: var(--secondary-text-color);
     font-family: var(--font2);
     font-size: 1.125rem;
@@ -569,4 +570,264 @@ body {
     font-family: var(--font2);
     font-size: 1rem;
     line-height: 1.5rem;
+}
+
+@media (max-width: 1440px) {
+
+
+    .benefits-card {
+        gap: 1rem
+    }
+
+    /* comments */
+    .comments-text {
+        margin: 1rem;
+        padding: 1rem 0.75rem;
+        gap: 0;
+    }
+
+    .comments-text h2 {
+        margin: 0;
+    }
+
+    .comments-text p {
+        margin: 1rem 0 0 0;
+    }
+
+    /* started */
+    .started-content>img {
+        position: absolute;
+        bottom: -2rem;
+        right: 0;
+    }
+}
+
+@media (max-width: 1024px) {
+    body {
+        margin: 0 4rem;
+    }
+
+    /* home-section-text */
+    .home-info {
+        padding-right: 30rem;
+    }
+
+    .home-img {
+        top: 10%;
+    }
+
+    #home-img-img {
+        width: 25rem;
+        height: auto;
+    }
+
+    #home-img-detail {
+        top: -4rem;
+        margin-left: -60px;
+    }
+
+    .home-footer {
+        margin: 5rem -4rem 2.5rem -4rem;
+    }
+
+    /* benefits */
+
+    #benefits,
+    #started {
+        margin: 0 -4rem;
+        padding: 1rem 0;
+    }
+
+    .benefits-content {
+        align-items: center;
+    }
+
+    .card {
+        padding: 2rem 2rem 4rem 2rem;
+    }
+
+    .card-5>img {
+        max-width: 18rem;
+        height: 18rem;
+    }
+
+    /* comments */
+    .user-comments {
+        flex-direction: column;
+        gap: 2rem;
+        align-items: center;
+    }
+
+    /* started */
+    .started-content {
+        gap: 3rem
+    }
+
+    .started-content>img {
+        right: -4rem;
+        top: -5rem;
+    }
+}
+
+@media (max-width: 425px) {
+
+    /* nav bar */
+    .menu,
+    .login {
+        display: none;
+    }
+
+    body {
+        margin: 0 1rem;
+    }
+
+    /* home-section-text */
+    .home-info {
+        padding: 0;
+    }
+
+    .home-info h1 {
+        font-size: 2.5rem;
+    }
+
+    .home-info p {
+        font-size: 1rem;
+    }
+
+    .home-img {
+        display: none;
+    }
+
+    .home-info-btn {
+        width: 16rem;
+    }
+
+    .home-footer {
+        margin: 5rem -1rem 2.5rem -1rem;
+    }
+
+    #scroll-text {
+        animation: scroll 15s infinite linear;
+    }
+
+    @keyframes scroll {
+        from {
+            transform: translateX(-150%);
+        }
+
+        to {
+            transform: translateX(100%);
+        }
+    }
+
+
+    /* benefits */
+    #benefits,
+    #started {
+        margin: 0 -1rem;
+        padding: 1rem 0;
+    }
+
+    .benefits-content {
+        margin: 0 1rem;
+        justify-content: center;
+    }
+
+    .benefits-card {
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+
+    /* comments */
+    .user-comments {
+        flex-direction: column;
+        gap: 2rem;
+        align-items: center;
+    }
+
+    /* historic comments */
+
+    .historic {
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+    }
+
+
+    .historic-data p,
+    .historic-data h1 {
+        text-align: center;
+        margin: 0;
+
+    }
+
+    /* started */
+
+    .started-content .wallet {
+        display: none;
+    }
+
+    .started-content>img {
+        right: -1rem;
+        top: -6rem;
+    }
+
+    .started-text {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    /* footer */
+    #footer-bar {
+        margin: 48px 0;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-between;
+    }
+
+    #footer-bar ul {
+        padding: 0;
+    }
+
+    .started-content {
+        margin: 0 1rem;
+    }
+
+}
+
+@media (max-width: 320px) {
+    .historic-data h1 {
+        font-size: 3rem;
+    }
+
+    /* comments */
+
+    .comments-content h1 {
+        margin: 0;
+    }
+
+    .card-user-comments>img {
+        max-width: 20rem;
+        height: auto;
+    }
+
+    .user-comments-text h3 {
+        margin-top: 0.75rem;
+    }
+
+    .user-comments-text>p {
+        margin-bottom: 0.25rem;
+    }
+
+    .comments-text p {
+        font-size: 0.75rem;
+    }
+
+    .comments-text h2 {
+        font-size: 1rem;
+    }
+
 }
