--- a/crypto folder/css/style.css
+++ b/crypto folder/css/style.css
@@ -1,897 +1,15 @@
-@import url('https://fonts.cdnfonts.com/css/lufga');
-@import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap');
-
-:root {
-    --font1: 'Lufga', sans-serif;
-    --font2: 'Plus Jakarta Sans';
-    --primary-background-color: #D6D7E0;
-    --secondary-background-color: #ffffff;
-    --secondary-background-color-alt: #FBF9FE;
-    --primary-text-color: #252525;
-    --text-black: #000000;
-    --text-white: #ffffff;
-    --secondary-text-color: #363637;
-    --text-color-detail: #F966B9;
-    --text-comment: #787478;
-}
-
-html {
-    margin: 0;
-    padding: 0;
-}
-
-ul,
-li {
-    list-style: none;
-}
-
-a {
-    text-decoration: none;
-    color: inherit;
-}
-
-body {
-    margin: 0 7.5rem;
-    background-color: var(--primary-background-color);
-}
-
-/* ********* utilidades ****** */
-
-.text-alt {
-    color: var(--text-color-detail);
-}
-
-/* ********* nav *********** */
-
-/* mobile */
-#nav-bar-mobile {
-    display: none;
-    position: relative;
-    justify-content: space-between;
-}
-
-.mobile-content {
-    position: absolute;
-    display: none;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background-color: var(--secondary-background-color-alt);
-    border-radius: 1rem;
-    z-index: 1;
-    right: 0;
-    top: 1rem;
-}
-
-
-.mobile-content>*:first-child {
-    position: absolute;
-    top: 0.5rem;
-    right: 0.5rem;
-}
-
-.itens-menu {
-    margin: 0;
-    padding: 3rem 2rem 2rem 2rem;
-}
-
-
-.itens-menu-login {
-    padding: 0;
-    display: flex;
-    gap: 0.5rem;
-    margin-bottom: 1rem;
-}
-
-.itens-menu-login li {
-    font-family: var(--font1);
-    background-color: var(--primary-text-color);
-    color: var(--secondary-background-color);
-    border-radius: 0.5rem;
-    padding: 0.5rem;
-    text-align: center;
-}
-
-.itens-menu-login li:nth-child(1) {
-    color: var(--primary-text-color);
-    background-color: var(--secondary-background-color-alt);
-}
-
-
-#nav-bar {
-    display: flex;
-    padding: 1.25rem 0;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.item-menu {
-    display: flex;
-}
-
-.logo {
-    display: flex;
-    align-items: center;
-    gap: 0.75rem;
-}
-
-.logo h2 {
-    font-family: var(--font1);
-    font-size: 1.5rem;
-    font-weight: 500;
-}
-
-.menu {
-    display: flex;
-    padding: 0.375rem 2rem 0.375rem 0.375rem;
-    background-color: var(--secondary-background-color-alt);
-    gap: 2.5rem;
-    align-items: center;
-    justify-content: center;
-    border-radius: 18rem;
-}
-
-.icon-home {
-    border-radius: 2.5rem;
-    background-color: var(--primary-text-color);
-    display: flex;
-    padding: 0.5rem 1rem;
-    justify-content: center;
-    align-items: center;
-    gap: 0.375rem;
-}
-
-.login li:nth-child(1) {
-    padding: 0.5rem 1.25rem;
-    color: var(--primary-text-color)
-}
-
-.login li:nth-child(2) {
-    background-color: var(--primary-text-color);
-    color: var(--secondary-background-color);
-    display: flex;
-    padding: 0.75rem 1.25rem;
-    align-items: center;
-    justify-content: center;
-    font-weight: 500;
-    gap: 0.375rem;
-    border-radius: 2.5rem;
-}
-
-.login li:nth-child(3) {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 50%;
-    width: 3rem;
-    height: 3rem;
-    background-color: var(--primary-text-color);
-}
-
-.login {
-    padding: 0;
-}
-
-.option-menu {
-    cursor: pointer;
-}
-
-.option-menu,
-.login {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: var(--primary-text-color);
-    font-family: var(--font2);
-    text-align: center;
-    font-size: 1rem;
-    font-weight: 500;
-    line-height: 1.5rem;
-}
-
-/* ********* home-section ******** */
-
-#home {
-    display: flex;
-    flex-direction: column;
-    position: relative;
-    margin-top: 3.81rem;
-
-}
-
-/* ***********home-section-text********** */
-
-.home-content {
-    display: flex;
-    flex-direction: row;
-}
-
-.home-info {
-    padding-right: 40rem;
-}
-
-.home-info>h1 {
-    font-family: var(--font1);
-    font-size: 3.75rem;
-    font-weight: 500;
-}
-
-.home-info>p {
-    font-family: var(--font2);
-    font-size: 1.25rem;
-}
-
-.home-info-detail {
-    font-family: var(--font2);
-    font-size: 1rem;
-    font-weight: 400;
-    display: flex;
-    gap: 0.5rem;
-    opacity: 50%;
-}
-
-.home-info-btn {
-    display: flex;
-    padding: 0.375rem 0.375rem 0.375rem 2rem;
-    border: 1px solid rgba(132, 129, 132, 0.50);
-    border-radius: 7.625rem;
-    justify-content: center;
-    align-items: center;
-    background-color: rgba(255, 255, 255, 0.5);
-    gap: 0.63rem;
-    font-weight: 400;
-    font-size: 1.125rem;
-    text-align: center;
-    width: 19rem;
-}
-
-.home-info-btn>a {
-    background-color: var(--primary-text-color);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 50%;
-    height: 49px;
-    width: 49px;
-}
-
-#arrow-btn {
-    width: 25px;
-    height: 25px;
-}
-
-/* ********* home-section-img ********** */
-
-.home-img {
-    position: absolute;
-    right: 0;
-}
-
-#home-img-img {
-    right: 7.5rem;
-}
-
-#home-img-detail {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 1.75rem;
-    border-radius: 50%;
-    background-color: var(--primary-text-color);
-    position: absolute;
-    margin-top: 250px;
-    margin-left: -45px;
-}
-
-.home-footer {
-    margin: 10rem -7.5rem 5rem -7.5rem;
-    overflow: hidden;
-}
-
-.home-footer ul {
-    display: flex;
-    flex-direction: row;
-    gap: 4rem;
-}
-
-.home-footer ul li {
-    white-space: nowrap;
-    font-family: var(--font1);
-    font-size: 1.5rem;
-    font-weight: 400;
-    text-align: center;
-}
-
-#scroll-text {
-    animation: scroll 12s infinite linear;
-}
-
-@keyframes scroll {
-    from {
-        transform: translateX(-115%);
-    }
-
-    to {
-        transform: translateX(100%);
-    }
-}
-
-/* ********* benefits ********** */
-
-#benefits,
-#started {
-    margin: 0rem -7.5rem;
-    background-color: rgba(255, 255, 255, 0.4);
-    border-radius: 1.75rem;
-    padding: 5rem 0;
-}
-
-
-.benefits-content {
-    display: flex;
-    flex-direction: column;
-    margin: 0rem 7.5rem;
-}
-
-.benefits-card {
-    display: flex;
-    justify-content: space-between;
-    flex-direction: row;
-}
-
-.column-item {
-    display: flex;
-    flex-direction: column;
-    gap: 1.25rem;
-}
-
-
-.benefits-content>h1 {
-    color: var(--primary-text-color);
-    font-family: var(--font1);
-    font-size: 2.5rem;
-    font-weight: 500;
-    line-height: 3.75rem;
-    text-align: center;
-}
-
-.card {
-    max-width: 25rem;
-    height: 19.75rem;
-    padding: 2.5rem 3.75rem 1.25rem 3.75rem;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    flex-direction: column;
-    background-color: var(--secondary-background-color);
-    border-radius: 1.5rem;
-}
-
-.card>h1 {
-    font-family: var(--font1);
-    text-align: center;
-    font-size: 1.5rem;
-    font-weight: 400;
-}
-
-.card p {
-    font-family: var(--font2);
-    text-align: center;
-    font-size: 1rem;
-    line-height: 1.7rem;
-    color: var(--secondary-text-color);
-}
-
-.card-1>img {
-    max-width: 8.5rem;
-    height: 8.5rem;
-}
-
-.card-4>img {
-    max-width: 14rem;
-    height: 9rem;
-    border-radius: 1.25rem;
-}
-
-.card-5 {
-    display: flex;
-    justify-content: start;
-    align-self: stretch;
-    height: auto;
-    padding: 2.483rem 4.097rem;
-}
-
-.card-5>img {
-    max-width: 25rem;
-    height: 25rem;
-}
-
-.card-5>p {
-    margin-bottom: 5.5rem;
-}
-
-
-/* ********* comments ********** */
-
-#comments {
-    margin: 3.75rem 0;
-}
-
-.comments-content {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    gap: 3.25rem;
-    flex: 1
-}
-
-.comments-content>h1 {
-    color: var(--primary-text-color);
-    text-align: center;
-    font-family: var(--font1);
-    font-size: 2.75rem;
-    font-weight: 500;
-    line-height: 3.75rem;
-}
-
-.user-comments {
-    display: flex;
-    justify-content: space-between;
-}
-
-.card-user-comments {
-    position: relative;
-}
-
-.card-user-comments>img {
-    max-width: 30rem;
-    height: auto;
-}
-
-.user-comments-text {
-    position: absolute;
-    top: 0;
-}
-
-.user-comments-text h3 {
-    color: var(--primary-text-color);
-    font-family: var(--font2);
-    font-size: 1rem;
-    font-weight: 600;
-    line-height: 1.5rem;
-    margin-left: 1.25rem;
-    margin-bottom: 0;
-    margin-top: 1rem;
-}
-
-.user-comments-text>p {
-    color: var(--text-comment);
-    font-family: var(--font2);
-    font-size: 0.875rem;
-    font-weight: 500;
-    margin-left: 1.25rem;
-    margin 0;
-}
-
-.user-comments-text>img {
-    position: absolute;
-    top: 0;
-    right: .75rem;
-    border-radius: 50%;
-    width: 16.5%;
-}
-
-.comments-text {
-    margin: 0 1.25rem;
-    display: inline-flex;
-    padding: 1.5rem 1.25rem;
-    flex-direction: column;
-    align-items: flex-start;
-    gap: 1rem;
-    background-color: var(--secondary-background-color);
-    border-radius: 1.25rem;
-}
-
-.comments-text h2 {
-    margin: 0;
-    width: 14rem;
-    font-family: var(--font1);
-    color: var(--primary-text-color-alt);
-    font-size: 1.75rem;
-    line-height: 2rem;
-    text-transform: uppercase;
-    font-weight: 400;
-}
-
-.comments-text p {
-    margin: 0;
-    font-family: var(--font2);
-    color: var(--text-black);
-    font-size: 1rem;
-    line-height: 1.5rem;
-    font-weight: 400;
-}
-
-/* historic comments */
-
-.historic {
-    display: flex;
-    justify-content: space-between;
-}
-
-.historic-data h1 {
-    color: var(--text-white);
-    font-family: var(--font2);
-    font-size: 5rem;
-    font-weight: 600;
-    margin-bottom: -1rem;
-    text-align: center;
-}
-
-.historic-data p {
-    color: var(--secondary-text-color);
-    font-family: var(--font2);
-    font-size: 1.125rem;
-    font-weight: 500;
-    text-transform: uppercase;
-    margin-top: 1rem;
-    text-align: center;
-}
-
-/* started */
-
-.started-content {
-    display: flex;
-    position: relative;
-    margin: 0 7.5rem;
-    max-width: 80rem;
-    gap: 10rem;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.started-content .wallet {
-    width: 26rem;
-    height: 28.75rem;
-    border-radius: 1.25rem;
-    flex-shrink: 0;
-    background: url(../css/assets/wallet.jpg) -110px -10px / 220% no-repeat;
-}
-
-.started-content>img {
-    position: absolute;
-    bottom: -2rem;
-    right: -12rem;
-}
-
-.started-text h1 {
-    font-family: var(--font1);
-    font-size: 3.125rem;
-    font-weight: 500;
-    text-transform: uppercase;
-}
-
-.started-text p {
-    font-size: 1.25rem;
-    line-height: 2rem;
-    font-family: var(--font2);
-    font-weight: 400;
-}
-
-.started-text a {
-    width: 11rem;
-    font-family: var(--font2);
-    font-size: 1.25rem;
-    font-weight: 500;
-    line-height: 1.75rem;
-    text-transform: uppercase;
-    background-color: var(--primary-text-color);
-    color: var(--text-white);
-    display: flex;
-    padding: 1rem 1.5rem 1rem 1.75rem;
-    align-items: center;
-    gap: 0.625rem;
-    border-radius: 7rem;
-}
-
-.started-text span {
-    transform: rotate(45deg);
-}
-
-.started-text span img {
-    display: flex;
-    width: 2rem;
-}
-
-/* footer */
-
-#footer-bar {
-    margin: 48px 0;
-    display: flex;
-    justify-content: space-between;
-}
-
-#footer-bar ul {
-    display: flex;
-    gap: 24px
-}
-
-#footer-bar h2 {
-    font-family: var(--font1);
-    color: var(--primary-text-color);
-    font-size: 1.5rem;
-    font-weight: 500;
-}
-
-#footer-bar p {
-    color: var(--text-comment);
-    text-align: right;
-    font-family: var(--font2);
-    font-size: 1rem;
-    line-height: 1.5rem;
-}
-
-@media (max-width: 1440px) {
-
-
-    .benefits-card {
-        gap: 1rem
-    }
-
-    /* comments */
-    .comments-text {
-        margin: 1rem;
-        padding: 1rem 0.75rem;
-        gap: 0;
-    }
-
-    .comments-text h2 {
-        margin: 0;
-    }
-
-    .comments-text p {
-        margin: 1rem 0 0 0;
-    }
-
-    /* started */
-    .started-content>img {
-        position: absolute;
-        bottom: -2rem;
-        right: 0;
-    }
-}
-
-@media (max-width: 1024px) {
-    body {
-        margin: 0 4rem;
-    }
-
-    /* home-section-text */
-    .home-info {
-        padding-right: 30rem;
-    }
-
-    .home-img {
-        top: 10%;
-    }
-
-    #home-img-img {
-        width: 25rem;
-        height: auto;
-    }
-
-    #home-img-detail {
-        top: -4rem;
-        margin-left: -60px;
-    }
-
-    .home-footer {
-        margin: 5rem -4rem 2.5rem -4rem;
-    }
-
-    /* benefits */
-
-    #benefits,
-    #started {
-        margin: 0 -4rem;
-        padding: 1rem 0;
-    }
-
-    .benefits-content {
-        align-items: center;
-    }
-
-    .card {
-        padding: 2rem 2rem 4rem 2rem;
-    }
-
-    .card-5>img {
-        max-width: 18rem;
-        height: 18rem;
-    }
-
-    /* comments */
-    .user-comments {
-        flex-direction: column;
-        gap: 2rem;
-        align-items: center;
-    }
-
-    /* started */
-    .started-content {
-        gap: 3rem
-    }
-
-    .started-content>img {
-        right: -4rem;
-        top: -5rem;
-    }
-}
-
-@media (max-width: 425px) {
-    body {
-        margin: 0 1rem;
-    }
-
-    /* nav bar */
-    .menu,
-    .login,
-    #nav-bar,
-    .mobile-content {
-        display: none;
-    }
-
-    #nav-bar-mobile {
-        display: flex;
-    }
-
-    /* home-section-text */
-    .home-info {
-        padding: 0;
-    }
-
-    .home-info h1 {
-        font-size: 2.5rem;
-    }
-
-    .home-info p {
-        font-size: 1rem;
-    }
-
-    .home-img {
-        display: none;
-    }
-
-    .home-info-btn {
-        width: 16rem;
-    }
-
-    .home-footer {
-        margin: 5rem -1rem 2.5rem -1rem;
-    }
-
-    #scroll-text {
-        animation: scroll 15s infinite linear;
-    }
-
-    @keyframes scroll {
-        from {
-            transform: translateX(-150%);
-        }
-
-        to {
-            transform: translateX(100%);
-        }
-    }
-
-
-    /* benefits */
-    #benefits,
-    #started {
-        margin: 0 -1rem;
-        padding: 1rem 0;
-    }
-
-    .benefits-content {
-        margin: 0 1rem;
-        justify-content: center;
-    }
-
-    .benefits-card {
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-    }
-
-    /* comments */
-    .user-comments {
-        flex-direction: column;
-        gap: 2rem;
-        align-items: center;
-    }
-
-    /* historic comments */
-
-    .historic {
-        display: flex;
-        flex-direction: column;
-        gap: 1rem;
-    }
-
-
-    .historic-data p,
-    .historic-data h1 {
-        text-align: center;
-        margin: 0;
-
-    }
-
-    /* started */
-
-    .started-content .wallet {
-        display: none;
-    }
-
-    .started-content>img {
-        right: -1rem;
-        top: -6rem;
-    }
-
-    .started-text {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
-
-    /* footer */
-    #footer-bar {
-        margin: 48px 0;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: space-between;
-    }
-
-    #footer-bar ul {
-        padding: 0;
-    }
-
-    .started-content {
-        margin: 0 1rem;
-    }
-
-}
-
-@media (max-width: 320px) {
-    .historic-data h1 {
-        font-size: 3rem;
-    }
-
-    /* comments */
-
-    .comments-content h1 {
-        margin: 0;
-    }
-
-    .card-user-comments>img {
-        max-width: 20rem;
-        height: auto;
-    }
-
-    .user-comments-text h3 {
-        margin-top: 0.75rem;
-    }
-
-    .user-comments-text>p {
-        margin-bottom: 0.25rem;
-    }
-
-    .comments-text p {
-        font-size: 0.75rem;
-    }
-
-    .comments-text h2 {
-        font-size: 1rem;
-    }
-
-}
+/* Utilidades */
+@import './utilidades/componentes.css';
+@import './utilidades/cores.css';
+@import './utilidades/tipografia.css';
+
+/* global */
+@import './global/global.css';
+@import './global/header.css';
+@import './global/footer.css';
+
+/* home */
+@import './home/home.css';
+@import './home/benefits.css';
+@import './home/comments.css';
+@import './home/started.css';
