--- a/crypto folder/css/home/benefits.css
+++ b/crypto folder/css/home/benefits.css
@@ -109,6 +109,11 @@
         align-items: center;
     }
 
+    .benefits-content>h1 {
+        font-size: 1.5rem;
+        line-height: 2rem;
+    }
+
     .card {
         padding: 2rem 2rem 4rem 2rem;
     }
@@ -136,6 +141,10 @@
         flex-direction: column;
         align-items: center;
         justify-content: center;
+    }
+
+    .card {
+        padding: 1rem 1rem 2rem 1rem;
     }
 
 }
