--- a/crypto folder/css/home/home.css
+++ b/crypto folder/css/home/home.css
@@ -155,15 +155,26 @@
 
     /* home-section-text */
     .home-info {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
         padding: 0;
     }
 
     .home-info h1 {
-        font-size: 2.5rem;
+        text-align: center;
+        font-size: 2rem;
     }
 
     .home-info p {
         font-size: 1rem;
+        text-align: center;
+    }
+
+    .home-info-btn {
+        text-align: center;
+        padding: 0.375rem;
+        width: 18rem;
     }
 
     .home-img {
@@ -174,8 +185,14 @@
         width: 16rem;
     }
 
+    .home-info-detail {
+        display: flex;
+        justify-content: center;
+    }
+
+
     .home-footer {
-        margin: 5rem -1rem 2.5rem -1rem;
+        margin: 3rem -1rem 2.5rem -1rem;
     }
 
     #scroll-text {
