--- a/crypto folder/css/style.css
+++ b/crypto folder/css/style.css
@@ -7,6 +7,7 @@
 @import './global/global.css';
 @import './global/header.css';
 @import './global/footer.css';
+@import './global/login.css';
 
 /* home */
 @import './home/home.css';
