--- a/crypto folder/css/global/login.css
+++ b/crypto folder/css/global/login.css
@@ -17,8 +17,8 @@ label {
 
 .modal-login {
     position: absolute;
-    left: 25%;
     top: 5%;
+    left: 22%;
     max-width: fit-content;
     background-color: var(--secondary-background-color-alt);
     display: flex;
@@ -29,13 +29,13 @@ label {
 
 
 .modal-login>img {
-    height: 60rem;
+    height: 50rem;
     width: auto;
     border-radius: 4rem 0 0 4rem;
 }
 
 .login-date {
-    padding: 5rem;
+    padding: 0rem 4rem 0 4rem;
     font-family: var(--font1);
     display: flex;
     align-items: center;
@@ -43,14 +43,14 @@ label {
 }
 
 .login-date h1 {
-    margin-top: -.5rem;
-    font-size: 3.75rem;
+    padding-top: 2.5rem;
+    font-size: 3rem;
 }
 
 .login-date ul {
     display: flex;
     gap: 3rem;
-    font-size: 2rem;
+    font-size: 1.5rem;
     margin-bottom: 1rem;
 }
 
